syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message InterchainMeta {
  map<string, Uint64Slice> counter = 1;
  repeated bytes l2Roots = 2 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
  map<string, Uint64Slice> timeoutCounter = 3;
  repeated bytes timeoutL2Roots = 4 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
}

message Uint64Slice {
  repeated uint64 slice = 1;
}

message Interchain {
  string ID = 1;
  map<string, uint64> InterchainCounter = 2;
  map<string, uint64> ReceiptCounter = 3;
  map<string, uint64> SourceReceiptCounter = 4;
}